Update DeepSeek API key in index.html

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
     <script>
         // DeepSeek API 配置（需要替换为你的 API Key）
         // 获取地址：https://platform.deepseek.com/
-        const DEEPSEEK_API_KEY = 'sk-请替换为你的DeepSeekKey';
+        const DEEPSEEK_API_KEY = 'sk-21002ecda5eb4a188fb431dff6c7bc74';
         const DEEPSEEK_API_URL = 'https://api.deepseek.com/v1/chat/completions';
         const REQUEST_TIMEOUT = 5000; // 5秒超时
         
