--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<head>
+    <!-- 其他 meta 标签 -->
+    <script src="config.js"></script>
+    <!-- 其他代码 -->
+</head>
+
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -509,7 +515,9 @@
     <script>
         // DeepSeek API 配置（需要替换为你的 API Key）
         // 获取地址：https://platform.deepseek.com/
-        const DEEPSEEK_API_KEY = 'sk-21002ecda5eb4a188fb431dff6c7bc74';
+        const DEEPSEEK_API_KEY = window.API_CONFIG?.DEEPSEEK_API_KEY || '';
+const DEEPSEEK_API_URL = window.API_CONFIG?.DEEPSEEK_API_URL || 'https://api.deepseek.com/v1/chat/completions';
+const REQUEST_TIMEOUT = window.API_CONFIG?.REQUEST_TIMEOUT || 5000;
         const DEEPSEEK_API_URL = 'https://api.deepseek.com/v1/chat/completions';
         const REQUEST_TIMEOUT = 5000; // 5秒超时
         
